tests/ui/async-await/field-assign-nonsend.drop_tracking_mir.stderr
error: future cannot be sent between threads safely
  --> $DIR/field-assign-nonsend.rs:45:17
   |
LL |     assert_send(agent.handle());
   |                 ^^^^^^^^^^^^^^ future returned by `handle` is not `Send`
   |
   = help: within `impl Future<Output = ()>`, the trait `Send` is not implemented for `Rc<String>`
note: captured value is not `Send` because `&mut` references cannot be sent unless their referent is `Send`
  --> $DIR/field-assign-nonsend.rs:19:21
   |
LL |     async fn handle(&mut self) {
   |                     ^^^^^^^^^ has type `&mut Agent` which is not `Send`, because `Agent` is not `Send`
note: required by a bound in `assert_send`
  --> $DIR/field-assign-nonsend.rs:40:19
   |
LL | fn assert_send<T: Send>(_: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error: aborting due to previous error

